<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView

            android:background="@drawable/pop_text_bg"
            android:id="@+id/admin_name"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="124dp"
            android:layout_height="38dp"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/logout"
            android:drawablePadding="10dp"
            android:text="@string/admin_name" />
        <TextView
            android:id="@+id/admin_pass"
            android:background="@drawable/pop_text_bg"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/clean"
            android:drawablePadding="10dp"
            android:text="@string/admin_pass" />

        <TextView
            android:id="@+id/admin_phone"
            android:background="@drawable/pop_text_bg"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/about"
            android:drawablePadding="10dp"
            android:text="@string/admin_phone" />
    </LinearLayout>

</LinearLayout>