<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/menu_logout"
            android:background="@drawable/pop_text_bg"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="124dp"
            android:layout_height="38dp"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/logout"
            android:drawablePadding="10dp"
            android:text="@string/menu_logout" />
        <TextView
            android:id="@+id/menu_clean"
            android:background="@drawable/pop_text_bg"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/clean"
            android:drawablePadding="10dp"
            android:text="@string/menu_clean" />

        <TextView
            android:id="@+id/menu_system"
            android:background="@drawable/pop_text_bg"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/about"
            android:drawablePadding="10dp"
            android:text="@string/menu_system" />
    </LinearLayout>

</LinearLayout>